--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://ulems.my.id/favicon.ico">
     <link rel="apple-touch-icon" sizes="192x192" type="image/png"
         href="https://ulems.my.id/assets/images/icon-192x192.png">
-    <link rel="icon" type="image/x-icon" href="https://ulems.my.id/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
 
     <!-- Preconnect and preload CDN -->
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net" crossorigin="anonymous">
@@ -445,6 +445,80 @@
                         <hr class="text-dark my-1">
                         <p class="text-dark mt-0 mb-1 mx-0 p-0" style="white-space: pre-line">
                             To my amazing sibling and their wonderful partner, today marks the beginning of a beautiful journey together. Seeing you both so happy fills my heart with joy. Here's to a lifetime of love, laughter, and unforgettable memories. Cheers!
+                    </div>
+                </div>
+
+                <div class="rounded-4 mt-4 mb-2">
+                    <div class="card-body bg-light shadow p-3 m-0 rounded-4" data-parent="true" id="${data.uuid}">
+                        <div class="d-flex flex-wrap justify-content-between align-items-center">
+                            <p class="text-dark text-truncate m-0 p-0" style="font-size: 0.95rem;">
+                                <strong class="me-1">Sumina Shibjad</strong><i
+                                    class="fa-solid ${data.hadir ? 'fa-circle-check text-success' : 'fa-circle-xmark text-danger'}"></i>
+                            </p>
+                            <small class="text-dark m-0 p-0" style="font-size: 0.75rem;"></small>
+                        </div>
+                        <hr class="text-dark my-1">
+                        <p class="text-dark mt-0 mb-1 mx-0 p-0" style="white-space: pre-line">
+                            To my awesome sibling and their fantastic partner, today marks the start of a beautiful journey together. Your happiness brings me great joy. Here's to a lifetime filled with love, laughter, and unforgettable memories. Cheers to both of you!
+                    </div>
+                </div>
+
+                <div class="rounded-4 mt-4 mb-2">
+                    <div class="card-body bg-light shadow p-3 m-0 rounded-4" data-parent="true" id="${data.uuid}">
+                        <div class="d-flex flex-wrap justify-content-between align-items-center">
+                            <p class="text-dark text-truncate m-0 p-0" style="font-size: 0.95rem;">
+                                <strong class="me-1">Shibjad Hussain</strong><i
+                                    class="fa-solid ${data.hadir ? 'fa-circle-check text-success' : 'fa-circle-xmark text-danger'}"></i>
+                            </p>
+                            <small class="text-dark m-0 p-0" style="font-size: 0.75rem;"></small>
+                        </div>
+                        <hr class="text-dark my-1">
+                        <p class="text-dark mt-0 mb-1 mx-0 p-0" style="white-space: pre-line">
+                            To my awesome brother-in-law and his amazing partner, as you start this journey together, know that your happiness fills us with joy. Here's to a lifetime of love, laughter, and beautiful moments. Cheers to your wonderful future!
+                    </div>
+                </div>
+
+                <div class="rounded-4 mt-4 mb-2">
+                    <div class="card-body bg-light shadow p-3 m-0 rounded-4" data-parent="true" id="${data.uuid}">
+                        <div class="d-flex flex-wrap justify-content-between align-items-center">
+                            <p class="text-dark text-truncate m-0 p-0" style="font-size: 0.95rem;">
+                                <strong class="me-1">Nahas Nishad</strong><i
+                                    class="fa-solid ${data.hadir ? 'fa-circle-check text-success' : 'fa-circle-xmark text-danger'}"></i>
+                            </p>
+                            <small class="text-dark m-0 p-0" style="font-size: 0.75rem;"></small>
+                        </div>
+                        <hr class="text-dark my-1">
+                        <p class="text-dark mt-0 mb-1 mx-0 p-0" style="white-space: pre-line">
+                            My dearest sibling and their wonderful partner, today marks the beginning of an extraordinary journey together. Your love is a beacon of hope and happiness. Here's to a lifetime filled with shared dreams, endless laughter, and unforgettable adventures. Cheers to your love!
+                    </div>
+                </div>
+
+                <div class="rounded-4 mt-4 mb-2">
+                    <div class="card-body bg-light shadow p-3 m-0 rounded-4" data-parent="true" id="${data.uuid}">
+                        <div class="d-flex flex-wrap justify-content-between align-items-center">
+                            <p class="text-dark text-truncate m-0 p-0" style="font-size: 0.95rem;">
+                                <strong class="me-1">Shahana Nishad</strong><i
+                                    class="fa-solid ${data.hadir ? 'fa-circle-check text-success' : 'fa-circle-xmark text-danger'}"></i>
+                            </p>
+                            <small class="text-dark m-0 p-0" style="font-size: 0.75rem;"></small>
+                        </div>
+                        <hr class="text-dark my-1">
+                        <p class="text-dark mt-0 mb-1 mx-0 p-0" style="white-space: pre-line">
+                            To my sibling and their amazing partner, as you step into this new chapter, my heart swells with pride and joy. Here's to the start of a magical journey, where love knows no bounds. May your days be adorned with happiness, laughter, and the sweetest of memories. Cheers to your everlasting bond!
+                </div>
+
+                <div class="rounded-4 mt-4 mb-2">
+                    <div class="card-body bg-light shadow p-3 m-0 rounded-4" data-parent="true" id="${data.uuid}">
+                        <div class="d-flex flex-wrap justify-content-between align-items-center">
+                            <p class="text-dark text-truncate m-0 p-0" style="font-size: 0.95rem;">
+                                <strong class="me-1">Ruxana Nahas</strong><i
+                                    class="fa-solid ${data.hadir ? 'fa-circle-check text-success' : 'fa-circle-xmark text-danger'}"></i>
+                            </p>
+                            <small class="text-dark m-0 p-0" style="font-size: 0.75rem;"></small>
+                        </div>
+                        <hr class="text-dark my-1">
+                        <p class="text-dark mt-0 mb-1 mx-0 p-0" style="white-space: pre-line">
+                            To my amazing sister-in-law and her wonderful partner, today marks the beginning of an extraordinary journey together. Your love is a beacon of hope and happiness. Here's to a lifetime filled with shared dreams, endless laughter, and unforgettable adventures. Cheers to your love!
                     </div>
                 </div>
 
