--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                     <div class="card-body bg-light shadow p-3 m-0 rounded-4" data-parent="true" id="${data.uuid}">
                         <div class="d-flex flex-wrap justify-content-between align-items-center">
                             <p class="text-dark text-truncate m-0 p-0" style="font-size: 0.95rem;">
-                                <strong class="me-1">Nahas Nishad</strong><i
+                                <strong class="me-1">Muhammad Nahas</strong><i
                                     class="fa-solid ${data.hadir ? 'fa-circle-check text-success' : 'fa-circle-xmark text-danger'}"></i>
                             </p>
                             <small class="text-dark m-0 p-0" style="font-size: 0.75rem;"></small>
