--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <meta name="apple-mobile-web-app-title" content="AR Stories | We are getting married!">
     <meta name="theme-color" content="#111111">
     <meta name="color-scheme" content="dark">
-    <link rel="canonical" href="https://ulems.my.id/">
-    <link rel="shortcut icon" type="image/x-icon" href="https://ulems.my.id/favicon.ico">
-    <link rel="apple-touch-icon" sizes="192x192" type="image/png"
-        href="https://ulems.my.id/assets/images/icon-192x192.png">
+    <link rel="canonical" href="https://arstories.in/">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="apple-touch-icon" sizes="192x192" type="image/png" href="./icon-192x192.png">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
 
     <!-- Preconnect and preload CDN -->
