--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="color-scheme" content="dark">
     <link rel="canonical" href="https://arstories.in/">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="apple-touch-icon" sizes="192x192" type="image/png" href="./icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="192x192" type="image/png" href="icon-192x192.png">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
 
     <!-- Preconnect and preload CDN -->
